# PythonEvolution

./: python-playground.py
Python_Challenges/ExercisingPython/: README.md  exercicio_1.py  exercicio_2.py  exercicio_3.py  exercise_4.py
Python_Challenges/ExercisingPython/GoogleChallenge_1/: choice_string.py  python-playground.py
Python_Challenges/InterviewChallenges/itriad/python-challenge/: readme.md
Python_Challenges/InterviewChallenges/itriad/python-challenge/backend/: .env  run.py
Python_Challenges/InterviewChallenges/itriad/python-challenge/backend/main/: __init__.py  db_utils.py  routes.py  utils.py
Python_Challenges/InterviewChallenges/itriad/python-challenge/backend/main/classes/: calculadora.py  entrada.py  estada.py  saida.py
Python_Challenges/InterviewChallenges/itriad/python-challenge/backend/main/classes/models/: interval.py  tabela.py  veiculo.py
Python_Projects/DJANGO-API-FROM-SCRATCH/: db.sqlite3
Python_Projects/DJANGO-API-FROM-SCRATCH/drinks/: models.py  serializers.py  settings.py  views.py
Python_Projects/DJANGO-API-FROM-SCRATCH/drinks/migrations/: 0001_initial.py
Python_Projects/flask-api-training/: hello.py
Python_Projects/flask-api-training/poetry-venv/: pyproject.toml
